api-gateway/src/k8/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: samnayak1/api-gateway:1.0.22
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "768Mi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"

        readinessProbe:  #has the app started
          httpGet:
            path: /actuator/health/readiness  
            port: 8084
          initialDelaySeconds: 30  
          periodSeconds: 10        
          timeoutSeconds: 5    
          successThreshold: 1      
          failureThreshold: 3     
         
        livenessProbe:  #is the app running
          httpGet:
            path: /actuator/health/liveness   
            port: 8084
          initialDelaySeconds: 60 
          periodSeconds: 15      
          timeoutSeconds: 5      
          failureThreshold: 3     
          
         
        startupProbe: #delays liveness checks until the pod succeeds
          httpGet:
            path: /actuator/health/liveness
            port: 8084
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
        ports:
        - containerPort: 8084
